--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,9 +2,9 @@ spring:
   application:
     name: findex
   datasource:
-    url: jdbc:postgresql://localhost:5432/findex
-    username: findex_user
-    password: findex1234
+    url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+    username: ${PGUSER}
+    password: ${PGPASSWORD}
     driver-class-name: org.postgresql.Driver
     hikari:
       maximum-pool-size: 10
@@ -26,7 +26,10 @@ spring:
       continue-on-error: false
 
 openApi:
-  key:
+  key: ${OPEN_API_KEY}
+
+server:
+  port: ${PORT}
 
 logging:
   level:
